# yolo-ui-detector

./: .gitignore  IMPROVEMENTS.md  MODEL_USAGE.md  PLAN.md  README.md  RUST_SERVICE.md  _nodejs_output.txt  _test_doc_examples.py  _test_nodejs.js  auto_train.ps1  auto_train.sh  bootstrap.sh  check_env.sh  clean_generated.sh  cloud_train.sh  demo_baidu.py  overnight.ps1  pyproject.toml  test_model.py  test_onnx.py  test_overnight.ps1  test_screen.py  train.py
collected/: element_plus.json  github_login.json  style_profile.json
dataset/: data.yaml  labels.cache
dataset/labels/: 00000.txt  00001.txt  00002.txt  00003.txt  00004.txt  00005.txt  00006.txt  00007.txt  00008.txt  00009.txt  00010.txt  00011.txt  00012.txt  00013.txt  00014.txt  00015.txt  00016.txt  00017.txt  00018.txt  00019.txt  00020.txt  00021.txt  00022.txt  00023.txt  00024.txt  00025.txt  00026.txt  00027.txt  00028.txt  00029.txt  00030.txt  00031.txt  00032.txt  00033.txt  00034.txt  00035.txt  00036.txt  00037.txt  00038.txt  00039.txt  (+260 more)
generator/: config.py  labeler.py  main.py  renderer.py
generator/static/bootstrap-icons/font/: bootstrap-icons.min.css
generator/templates/: button.py  input.py  modal.py  page.py
tests/: test_button.py  test_config.py  test_input.py  test_labeler.py  test_main.py  test_modal.py  test_page.py  test_renderer.py
